--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -73,7 +73,7 @@
   -->
   <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}">
 
-  <title>{% block title %}Global Change Lab{% endblock %}</title>
+  <title>{% block title %}Franklin{% endblock %}</title>
 
   {% block extra_head %}{% endblock %}
 
@@ -113,7 +113,7 @@
         <ul class="title-area">
           <li class="name">
             <!-- <h1><a href="#">My Site</a></h1> -->
-            <a href="/" title="Global Change Lab home" id="gcl-logo"><img src="{% static 'images/gcl-logo.png' %}"></a>
+            <a href="/" title="Franklin home" id="gcl&#45;logo">Franklin</a>
           </li>
           <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
         </ul>
@@ -188,32 +188,27 @@
     <div class="row">
     {% block footer %}
       <div class="columns footer-left">
-        <div class="social-icons">
-          <a class="icon-twitter-circled medium red" href="https://twitter.com/Gchangelab" title="Follow us on Twitter!"></a>
-          <!--a class="icon-facebook-circled medium red" href="#"></a>
-          <a class="icon-gplus-circled medium red" href="#"></a>
-          <a class="icon-flickr-circled medium red" href="#"></a-->
-        </div>
         <div class="row" id="footer-links">
-          <div class="large-4 columns">
-            <h6>From The Lab</h6>
+          <!-- <div class="large&#45;4 columns"> -->
+          <!--   <h6>From The Lab</h6> -->
 
-            {% load gcl_utils %}
-            {% get_footer_flatpages as flatpages %}
-            {% for page in flatpages %}
-            <a class="notice" href="{% url 'django.contrib.flatpages.views.flatpage' page.url %}">{{ page.title }}</a>
-            {% endfor %}
-          </div>
+          <!--   {% load gcl_utils %} -->
+          <!--   {% get_footer_flatpages as flatpages %} -->
+          <!--   {% for page in flatpages %} -->
+          <!--   <a class="notice" href="{% url 'django.contrib.flatpages.views.flatpage' page.url %}">{{ page.title }}</a> -->
+          <!--   {% endfor %} -->
+          <!-- </div> -->
           <div class="large-4 columns">
-            <h6>About Training</h6>
-            <a target="_blank" class="notice" href="http://www.globalplatforms.org/training-principles">{% itrans 'Training Principles' %}</a>
-            <a target="_blank" class="notice" href="http://www.globalplatforms.org/all-trainings">{% itrans 'Get Trained Face To Face' %}</a>
+            <h6>About Franklin</h6>
+            <a target="_blank" class="notice" href="#">{% itrans 'Training Principles' %}</a>
+            <a target="_blank" class="notice" href="#">{% itrans 'Help' %}</a>
+            <a target="_blank" class="notice" href="#">{% itrans 'FAQ' %}</a>
           </div>
-          <div class="large-4 columns">
-            <h6>Who We Are</h6>
-            <a target="_blank" class="notice" href="http://www.globalplatforms.org">Global Platforms</a>
-            <a target="_blank" class="notice" href="http://ms.dk">ActionAid Denmark</a>
-          </div>
+          <!-- <div class="large&#45;4 columns"> -->
+          <!--   <h6>Who We Are</h6> -->
+          <!--   <a target="_blank" class="notice" href="http://www.globalplatforms.org">Global Platforms</a> -->
+          <!--   <a target="_blank" class="notice" href="http://ms.dk">ActionAid Denmark</a> -->
+          <!-- </div> -->
         </div>
       </div>
       <div class="creative-commons-icons">
@@ -226,8 +221,7 @@
       </div>
 
       <!--[if lt IE 9]><div style="display:none;"><![endif]-->
-      <img id="footer-logo" src="{% static 'images/logo-small-footer.png' %}">
-      <img id="footer-guy" src="{% static 'images/peace-guy.png' %}">
+      <!-- <img id="footer&#45;logo" src="{% static 'images/logo&#45;small&#45;footer.png' %}"> -->
       <!--[if lt IE 9]></div><![endif]-->
     {% endblock %}
     </div>
