--- a/global_change_lab/templates/global_change_lab/email/comment_reply_message.html
+++ b/global_change_lab/templates/global_change_lab/email/comment_reply_message.html
@@ -6,6 +6,6 @@
 just commented on your comment on
 <a href="{{ domain_url }}{{ comment.get_absolute_url }}">{{ comment.project.name }}</a>!<br>
 <br>
-The Global Change Lab<br>
+The Franklin<br>
   </body>
 </html>
