--- a/global_change_lab/templates/global_change_lab/email/project_comment_message.html
+++ b/global_change_lab/templates/global_change_lab/email/project_comment_message.html
@@ -8,7 +8,7 @@ Perhaps you want to check out what
 <a href="{{ domain_url }}{{ comment.author.get_absolute_url }}">{{ comment.author.username }}</a>
 have been sharing?<br>
 <br>
-The Global Change Lab
+The Franklin
 {# Do you want to unsubscribe to this notification? UNSUBSCRIBE LINK #}
   </body>
 </html>
