--- a/global_change_lab/templates/new_user_input_details.html
+++ b/global_change_lab/templates/new_user_input_details.html
@@ -16,15 +16,8 @@
       <h1 class="white">Please provide us with more details about yourself</h1>
       {# <p class="bold"> #}
       {#   We would love to get to know you better and it helps us continue to #}
-      {#   build an even better Global Change Lab. #}
+      {#   build an even better Franklin. #}
       {# </p> #}
-      <p>
-      We use the information for two reasons. The first one is the more we know
-      about you the better we can make Global Change Lab. Secondly we use the
-      data presented in anonymous ways to tell the ones that funds us to give us
-      more money.
-      </p>
-
       <p>
       We promise to take care of your personal information and will never share
       it with third parties. Please read our
