--- a/global_change_lab/templates/new_user_topics.html
+++ b/global_change_lab/templates/new_user_topics.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="new-user-progress">
-    <button id="start-using-gcl" class="button next">{% itrans '3/3 Start using Global Change Lab' %}</button>
+    <button id="start-using-gcl" class="button next">{% itrans '3/3 Start using Franklin' %}</button>
   </div>
   </form>
 </div>
