--- a/global_change_lab/templates/partials/user_info_form.html
+++ b/global_change_lab/templates/partials/user_info_form.html
@@ -58,7 +58,7 @@
       {% endif %}
     </div>
     <div class="columns medium-8">
-      <label>Organization or relation to actionAid
+      <label>Organization
         {{ form.organization }}
       </label>
       {% if form.organization.errors %}
