--- a/skills/templates/skills/partials/metadata_tags.html
+++ b/skills/templates/skills/partials/metadata_tags.html
@@ -1,7 +1,7 @@
 {% load embed_video_tags %}
 
   {# Site name #}
-  <meta property="og:site_name" content="Global Change Lab"> {# Open Graph #}
+  <meta property="og:site_name" content="Franklin"> {# Open Graph #}
 
   {# Title #}
   <meta itemprop="name" content="{{ title }}"> {# Schema.org markup for Google+ #}
