--- a/skills/templates/skills/skills_overview.html
+++ b/skills/templates/skills/skills_overview.html
@@ -12,7 +12,7 @@
   {% endcomment %}
 
   <p>
-    {% itrans "Skills are sets of selected training bits you need to change the world. You can take the training bits in any order you'll like but you need to take them all to get the skill. Start with the skill you like the most." %}
+    {% itrans "Skills are sets of selected training bits you need to master your field. You can take the training bits in any order you'll like but you need to take them all to get the skill. Start with the skill you like the most." %}
   </p>
 {% endblock %}
 
