--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -104,8 +104,8 @@ Offline.on('up', function() {
     <a href="#" class="info-icon" data-reveal-id="share-info-modal" data-reveal><i class="icon-info"></i></a>
     <div id="share-info-modal" class="reveal-modal" data-reveal>
       <h1>Share</h1>
-      {# {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share your work with the rest of us. Whether it is a short essay and a video of your latest campaign or a reflection about the use of a specific tool, it is an opportunity for you to share and connect with the Global Change Lab community." %} #}
-      {% itrans "Share is where the user share his/hers result/part of the result of the learning and/or a specific reflection of the learning which the user can pass on to others. It is important here to make sure that it is easy to share something that the user i.e. feels proud off or can see the relevance for others. Be aware that all sharings serve as inspiration for other users on Global Change Lab." %}
+      {# {% itrans "The last part of the training bit - and a step you need to do to complete it - is to share your work with the rest of us. Whether it is a short essay and a video of your latest campaign or a reflection about the use of a specific tool, it is an opportunity for you to share and connect with the Franklin community." %} #}
+      {% itrans "Share is where the user share his/hers result/part of the result of the learning and/or a specific reflection of the learning which the user can pass on to others. It is important here to make sure that it is easy to share something that the user i.e. feels proud off or can see the relevance for others. Be aware that all sharings serve as inspiration for other users on Franklin." %}
       <a class="close-reveal-modal">&#215;</a>
     </div>
     <div class="trainingbit-content-editor share-section" id="share-edit">
