--- a/skills/templates/skills/trainingbits_overview.html
+++ b/skills/templates/skills/trainingbits_overview.html
@@ -20,7 +20,7 @@ behind the topics.</p>
 {% endcomment %}
 
 <p>
-{% itrans "Training bits are small pieces of inspiration, tools or background in activism and social change. Each training bit has something for you to learn, to act upon and to share with other activists. You are free to choose the bits you want and do them in your own pace." %}
+{% itrans "Training bits are small pieces of inspiration, tools or background in a specific area of interest. Each training bit has something for you to learn, to act upon and to share with other people. You are free to choose the bits you want and do them in your own pace." %}
 </p>
 {% endblock %}
 
