--- a/global_change_lab/templates/account/email/email_confirmation_signup_message.html
+++ b/global_change_lab/templates/account/email/email_confirmation_signup_message.html
@@ -9,48 +9,47 @@
 {% autoescape off %}
 {% blocktrans with current_site.name as site_name %}
 <p>
-Hi {{ user_display }} and welcome to Global Change Lab<br>
+Hi {{ user_display }} and welcome to Franklin<br>
 <br>
 Please, confirm your profile by clicking on this link:
 </p>
 <a href="{{ activate_url }}">{{ activate_url }}</a>
 <br>
 <br>
-... and get ready to get the most out of Global Change Lab<br>
+... and get ready to get the most out of Franklin<br>
 <br>
-<h4>Get activist skills</h4>
+<h4>Get skills</h4>
 </p>
-Skills are sets of training bits you need to change the world.
-<a href="http://www.globalchangelab.org/skills">Check out</a> what
+Skills are sets of training bits you need.
+<a href="http://www.getfranklin.com/skills">Check out</a> what
 skills you can begin with already today.
 </p>
 
 
 <h4>Do Training Bits</h4>
 <p>
-Training bits are small pieces of inspiration, tools or background in activism
-and social change.
-<a href="http://www.globalchangelab.org/trainingbits">Get going</a> with a bit right away
+Training bits are small pieces of inspiration, tools or background for learning.
+<a href="http://www.getfranklin.com/trainingbits">Get going</a> with a bit right away
 </p>
 
 <h4>Share with others</h4>
 <p>
 When you complete training bits you need to take some
-action. Share what you do or <a href="http://www.globalchangelab.org/shares">learn from other activists</a>.
+action. Share what you do or <a href="http://www.getfranklin.com/shares">learn from others</a>.
 </p>
 
 <br>
 <p>
-To learn more about Global Change Lab, visit our
-<a href="http://www.globalchangelab.org/pages/about-global-change-lab">About Page</a>
+To learn more about Franklin, visit our
+<a href="http://www.getfranklin.com/pages/about-global-change-lab">About Page</a>
 </p>
 <br>
 
 <p>
 Enjoy your bits and feel free to
-<a href="http://www.globalchangelab.org/pages/contact">contact us</a>.<br>
-Train the world! Change the world!<br>
-The Global Change Lab
+<a href="http://www.getfranklin.com/pages/contact">contact us</a>.<br>
+Train the world!<br>
+Franklin
 </p>
 {% endblocktrans %}
 {% endautoescape %}
