--- a/global_change_lab/templates/account/email/password_reset_key_message.html
+++ b/global_change_lab/templates/account/email/password_reset_key_message.html
@@ -7,7 +7,7 @@
 <p>
 Hello!<br>
 You're receiving this e-mail because you or someone else has requested a
-password for your Global Change Lab user account.
+password for your Franklin user account.
 </p>
 
 <p>
@@ -24,8 +24,8 @@ In case you forgot, your username is {{ username }}.
 </p>
 
 <p>
-Thanks for using Global Change Lab!<br>
-The Global Change Lab
+Thanks for using Franklin!<br>
+The Franklin
 </p>
 {% endblocktrans %}
   </body>
