--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -11,33 +11,36 @@
   <img src="{% static 'images/peace-guy.png' %}">
   <div id="front-page-greeter">
     <div class="announcement">
-      <span class="red">Change<br> the world!</span><br/>
-      Bit by bit
+      Tell me and I forget.<br>
+      Teach me and I remember.<br>
+      Involve me and I learn<br>
+      <div class="cited-author">- Benjamin Franklin</div>
     </div>
     <div class="info">
-      {% itrans 'Global Change Lab is a training hub for global activists' %}
+      {% itrans 'Franklin is an online platform that empowers people and organizations to get involved in learning' %}
       {# <strong>Start your training now!</strong> #}
-      <a href="{% url 'account_signup' %}" class="button join">{% itrans 'Sign up' %}</a>
+      <a href="{% url 'account_signup' %}" class="button join">{% itrans 'Get Franklin' %}</a>
     </div>
   </div>
 </div>
 <div class="row" id="front-page-cols">
   <div class="medium-4 columns">
-    <h1>Get activist skills</h1>
+    <h1>Get skills</h1>
     <i class="icon-trophy large red"></i>
-    <p>Skills are sets of training bits you need to change the world</p>
+    <p>Find skills that you need</p>
+    <br>
     <a href="{% url 'skills:skills_overview' %}" class="button join">See all skills</a>
   </div>
   <div class="medium-4 columns">
-    <h1>Do training bits</h1>
+    <h1>Do training</h1>
     <i class="icon-tools large red"></i>
-    <p>Training bits are small pieces of inspiration, tools or background in activism and social change</p>
+    <p>Train through inspiration, tools or background</p>
     <a href="{% url 'skills:trainingbits_overview' %}" class="button join">See all bits</a>
   </div>
   <div class="medium-4 columns">
-    <h1>Share with others</h1>
+    <h1>Share</h1>
     <i class="icon-chat large red"></i>
-    <p>Share what you do and learn from other activists</p>
+    <p>Share what you learn with other people</p>
     <a href="{% url 'skills:shares_overview' %}" class="button join">See all shares</a>
   </div>
 </div>
