--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -10,6 +10,7 @@
   {# For showing not-full-pages to iPhones  #}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
   {% if debug %}
   <script src="//localhost:35729/livereload.js"></script>
