--- a/global_change_lab/templates/new_user_suggestions.html
+++ b/global_change_lab/templates/new_user_suggestions.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 <div id="new-user-suggestions">
-  <h1>You might start with these <span class="white-on-red">training bits</span></h1>
+  <h1>You might start with these <span class="red">training bits</span></h1>
   <div class="row">
     {% include 'partials/trainingbits_grid.html' %}
     <div class="see-more">
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div>
-    <h1>or get going with these <span class="white-on-red">skills</span></h1>
+    <h1>or get going with these <span class="red">skills</span></h1>
     {% include 'skills/partials/skill_list_large.html' %}
     <div class="see-more">
       <a class="button" href="{% url 'skills:skills_overview' %}">See more skills</a>
