--- a/scss/base.scss
+++ b/scss/base.scss
@@ -9,7 +9,7 @@ html, body {
 }
 // $fat-footer-height: rem-calc(300px);
 $fat-footer-height: 0;
-$static-footer-height: rem-calc(300px);
+$static-footer-height: rem-calc(180px);
 $footer-height: $fat-footer-height + $static-footer-height;
 $footer-height-small: $footer-height - rem-calc(60px);
 
@@ -106,16 +106,19 @@ body.trainer-interface {
   // Logo
   a#gcl-logo {
     line-height: $topbar-height;
+    vertical-align: middle;
 
     img { visibility: hidden; }
 
     display: inline-block;
     // PNG size: 190x43 (WxH)
     width: rem-calc(110px);
-    height: rem-calc(25px);
-    margin-top: rem-calc(10px);
+    height: 100%;
+    // margin-top: rem-calc(10px);
+    text-transform: uppercase;
+    font-weight: 700;
 
-    background-image: url(/static/images/gcl-logo.png);
+    //background-image: url(/static/images/gcl-logo.png);
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -266,7 +269,7 @@ footer {
 
   }
 
-  $social_icons_height: rem-calc(120px);
+  $social_icons_height: rem-calc(80px);
 
   .social-icons {
     width: 100%;
@@ -299,6 +302,7 @@ footer {
 
   #footer-links {
     margin-left: 0;
+    margin-top: rem-calc(25px);
     font-size: 0.7rem;
     line-height: 1.3;
     // font-weight: 100;
