[Fix&Design] trainer-interface: Menu color wrong
The buttons in the top bar had the wrong background color: they had
the light gray color from the user interface. instead of the dark
gray of the trainer interface.

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -116,6 +116,10 @@ body.trainer-interface {
   }
 
   .left {
+    // The following line ensures the right background color, when in the
+    // trainer interface
+    li { background-color: inherit; }
+
     li a {
       font-weight: bold;
       color: $gcl-midgray;
