--- a/skills/templates/skills/partials/skill_list_large.html
+++ b/skills/templates/skills/partials/skill_list_large.html
@@ -8,7 +8,7 @@
       <img src="{% skill_user_flag_image skill request.user %}" alt="Skill image">
     </div>
     <div class="description"> <!--  small-10 columns"> -->
-      <a href="{{ skill.get_absolute_url }}"><h2>{{skill.name}}</h2></a>
+      <a href="{{ skill.get_absolute_url }}" name="skill-name"><h2>{{skill.name}}</h2></a>
       <p>{{skill.description|truncatechars:170}}</p>
       <div class="info">
         <span class="trainingbit-count">{{ skill.trainingbit_count }} Training Bits</span>
