[MAJOR] Changes the tests from grunt to django
This commit changes the tests from working with grunt, which got very
messy, very quickly, and replaces it with the built in django test
framework. Also adds skill completion test, which tests that a skill
can be completed, and rewrites login-test to work with the new system.
Moves away from nose as well.

Minor changes to skills.json

Adds a name flag to an element of skill_view to make it easier to
find with selenium

Adds a name flag to an element of trainingbit_cover to make it easier
to find with selenium

Adds tests.py, the new file for tests to be written in.

--- a/skills/templates/skills/skill_view.html
+++ b/skills/templates/skills/skill_view.html
@@ -49,7 +49,7 @@
       <a class="stop notice" href="{% url 'skills:skill_stop' skill.id %}">Stop taking this skill</a>
     {% else %}
       <a class="stop notice" style="display: none" href="{% url 'skills:skill_stop' skill.id %}">Stop taking this skill</a>
-      <a class="button small begin" href="{% url 'skills:skill_start' skill.id %}">Start this skill</a>
+      <a class="button small begin" href="{% url 'skills:skill_start' skill.id %}" name="start-button">Start this skill</a>
     {% endif %}
   {% else %}
     <a class="button small" href="{% url 'account_login' %}">Sign in to start this skill</a>
