Adds a period to the front page
The front page was (in the opinion of the author) missing a period, and
it was driving him insane, so he put it in.

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -12,7 +12,7 @@
     <div class="announcement">
       Tell me and I forget.<br>
       Teach me and I remember.<br>
-      Involve me and I learn<br>
+      Involve me and I learn.<br>
       <div class="cited-author">- Benjamin Franklin</div>
     </div>
     <div class="info">
